--- a/Server/CMakeLists.txt
+++ b/Server/CMakeLists.txt
@@ -8,3 +8,6 @@ include_directories(.)
 add_executable(Server
         server.cpp
         sqlite3.c)
+
+
+target_link_libraries(Server PRIVATE ws2_32.lib)
